# DiseaseSimulator

./: .gitignore  CMakeLists.txt  README.md
AssortedOther/: HW3.cpp  HW4.F90  HW5-1.F90  HW5.F90  HW6.F90
FinalProject/: FinalProject.tar  ISPFinalProject.xlsx  LarenSpearFinal.cpp  Output.txt
FinalProject/2023Update/: population.hpp  simulation.cpp
FortranMidterm/: FortranMidterm.F90  MaxMinAvg.txt
GFortranPortMidterm/: FortranMidterm.F90  MidtermData.txt  a.out  lspear-COE322-Project.f90.tar  primenumbers.mod
src/: .clang-format  a.out  main.cpp  person.cpp  person.h  person.hpp  population.cpp  population.h  simulation.cpp
src/simulation/: simulation.cpp
